[package]
name = "libp2p-webrtc-str0m"
version = "0.1.0-alpha"
authors = ["Doug Anderson <doug@peerpiper.io>"]
description = "A str0m based WebRTC transport for libp2p"
repository = "https://github.com/libp2p/rust-libp2p"
license = "MIT"
edition = "2021"
rust-version = { workspace = true }
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
# workspace dependencies
futures = { workspace = true }
libp2p-core = { workspace = true }
libp2p-noise = { workspace = true }
libp2p-identity = { workspace = true }
libp2p-webrtc-utils = { workspace = true }
multihash = { workspace = true }
tracing = { workspace = true }

# external dependencies
if-watch = "3.2"
rand = "0.8"
send_wrapper = "0.6.0"
socket2 = { version = "0.5.5", features = ["all"] }
str0m = "0.5.1"
thiserror = "1"
tokio = { workspace = true, features = ["net", "macros", "time"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:tokio-util", "if-watch/tokio"]

[dev-dependencies]
libp2p-identity = { workspace = true, features = ["rand"] }
tokio = { workspace = true, features = ["full"] }
quickcheck = "1.0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# [[test]]

[lints]
workspace = true

# Passing arguments to the docsrs builder in order to properly document cfg's.
# More information: https://docs.rs/about/builds#cross-compiling
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]
